--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
    <application
         android:label="great_places"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyAObMzoszg93PuKpMW5JpUjbN4H9JC0isY"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
